--- a/src/components/transactions/TransactionDate.scss
+++ b/src/components/transactions/TransactionDate.scss
@@ -4,12 +4,14 @@
   width: 5.5rem;
   height: 5.5rem;
   border: 1px solid #ececec;
-  background-color: #2a2a2a;
-  color: white;
+  background-color: var(--color-date-card-background);
+  color: var(--color-text-secondary);
   border-radius: 12px;
+  border-color: var(--color-date-card-border);
   align-items: center;
   justify-content: center;
 }
+
 
 .expense-date__month {
   font-size: 0.75rem;
@@ -23,4 +25,5 @@
 .expense-date__day {
   font-size: 1.5rem;
   font-weight: bold;
+  color: var(--color-date-card-text); 
 }
