--- a/src/components/transactions/Transactions.scss
+++ b/src/components/transactions/Transactions.scss
@@ -1,6 +1,6 @@
 .expenses {
   padding: 1rem;
-  background-color: rgb(31, 31, 31);
+  background-color: var(--color-card-background-bottom);
   margin: 2rem auto;
   width: 50rem;
   max-width: 95%;
