transaction bar chart

--- a/src/components/transactions/new_transaction/TransactionForm.scss
+++ b/src/components/transactions/new_transaction/TransactionForm.scss
@@ -23,6 +23,13 @@
 }
 
 .new-expense__actions {
-  text-align: right;
+  height: 4rem;
+  margin-top: 9px;
+}
 
+#exit-button {
+  background: none;
+  border: none;
+  color: var(--color-text-secondary);
+  padding: 10px;
 }
