--- a/src/design-tokens/css-variables.scss
+++ b/src/design-tokens/css-variables.scss
@@ -12,6 +12,7 @@
   --color-card-background-other: #4B4B4B;
 
   --color-button-background: #087E8B;
+  --color-button-background-active: #0aa0b1;
   --color-button-outline: #FFFFFF;
   --color-button-text: #FFFFFF;
 
